--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     {% endfor %}
     
     <div class="previews__container">
-      <span>Welcome to</span>
+      <span>The Blog of</span>
       <h1>{{ site.title }}</h1>
     </div>
   </div>
